--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
+
+    id 'kotlin-kapt'
 }
 
 android {
@@ -61,4 +63,8 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
     //implementation 'com.github.corouteam:GlideToVectorYou:v2.0.0'
+
+    //Room
+    implementation 'androidx.room:room-runtime:2.4.2'
+    kapt 'androidx.room:room-compiler:2.4.2'
 }
